Bug 248728 - [SIMD] Intel support for swizzle and shuffle and fix extract_lane and replace_lane
Summary: [SIMD] Intel support for swizzle and shuffle and fix extract_lane and replace...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Yijia Huang
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-12-03 18:29 PST by Yijia Huang
Modified: 2022-12-06 01:31 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yijia Huang 2022-12-03 18:29:31 PST
...
Comment 1 Yijia Huang 2022-12-03 18:36:42 PST
<rdar://102942396>
Comment 2 Yijia Huang 2022-12-03 18:59:13 PST
Pull request: https://github.com/WebKit/WebKit/pull/7125
Comment 3 EWS 2022-12-06 01:31:12 PST
Committed 257400@main (cef394ff577b): <https://commits.webkit.org/257400@main>

Reviewed commits have been landed. Closing PR #7125 and removing active labels.